// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequiresPermissionHOC/> user has permission 1`] = `
<span>
  Only visible if user has Insert permissions
</span>
`;

exports[`<RequiresPermissionHOC/> user has some but not all permissions 1`] = `null`;

exports[`<RequiresPermissionHOC/> user without permission 1`] = `null`;

exports[`<RequiresPermissionHOC/> user without permissions and permission not allowed component 1`] = `
<span>
  Visible when user does not have insert permissions
</span>
`;
